salesforce/force-app/main/default/objects/Formula_Version__c/Formula_Version__c.object-meta.xml
<CustomObject>
    <description>Tracks multiple versions of a formula</description>
    <label>Formula Version</label>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formula Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>