salesforce/force-app/main/default/objects/Formula_Version__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <referenceTo>Formula__c</referenceTo>
    <relationshipLabel>Formula Versions</relationshipLabel>
    <relationshipName>Formula_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>