salesforce/force-app/main/default/objects/Formula_Version__c/fields/Version_Notes__c.field-meta.xml
<CustomField>
    <fullName>Version_Notes__c</fullName>
    <label>Version Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>